samples/_failures_safe/1761367542_24ae94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6479f9e4.c: In function ‘main’:
./samples/SAFE/__tmp_6479f9e4.c:166:29: error: expected ‘;’ at end of input
  166 |         input[input_len - 1]
      |                             ^
      |                             ;
./samples/SAFE/__tmp_6479f9e4.c:166:9: error: expected declaration or statement at end of input
  166 |         input[input_len - 1]
      |         ^~~~~
./samples/SAFE/__tmp_6479f9e4.c:166:9: error: expected declaration or statement at end of input
